--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch db.json --port 4000",
+    "serve": "concurrently \"npm run dev\" \"npm run json-server\""
   },
   "dependencies": {
+    "concurrently": "^7.4.0",
     "json-server": "^0.17.0",
     "next": "12.2.5",
     "react": "18.2.0",
