--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "json-server": "json-server --watch db.json --port 4000",
-    "serve": "concurrently \"npm run dev\" \"npm run json-server\""
+    "serve": "concurrently \"npm run dev\" \"npm run json-server\"",
+    "build-api": "concurrently \"npm run build\" \"npm run json-server\""
   },
   "dependencies": {
     "concurrently": "^7.4.0",
